[project]
name = "hello-crystalbaek"
version = "0.3.0"
description = ""
authors = [
    {name = "crystalbaek", email = "bfilkll730@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
